--- a/libraries/translations/de.lang
+++ b/libraries/translations/de.lang
@@ -1,4 +1,4 @@
 header.slogan=Deine Blöcke, dein Style
 
 body.uptime.all_time=Uptime gesamt:
-body.uptime.last_mont=Uptime letzter Monat:
+body.uptime.last_month=Uptime letzter Monat:
