--- a/libraries/translations/en.lang
+++ b/libraries/translations/en.lang
@@ -1,4 +1,4 @@
 header.slogan=Your Blocks, your Style
 
 body.uptime.all_time=Uptime total:
-body.uptime.last_mont=Uptime last month:
+body.uptime.last_month=Uptime last month:
