Added Terms of Service in Geman

--- a/libraries/translations/de.lang
+++ b/libraries/translations/de.lang
@@ -11,3 +11,20 @@ menu.about.commercial=Kommerzielle Verwendung
 menu.about.tos=Nutzungsbedingungen
 menu.about.stats=Statistiken
 menu.contact=Kontakt
+
+legal.tos=<h1>Nutzungsbedingungen für Icon-Craft.net</h1>\
+<h2>§ 1 Geltungsbereich</h2>\
+<p>(1) Die nachfolgenden Bedingungen gelten für jegliche Nutzung von - im folgenden "Unsere Webseite" genannt - <a href="/">Icon-Craft.net</a>. Für die Nutzung dieses Onlineservices ist wichtig, dass Sie als Nutzer/Nutzerin die nachfolgenden Regeln bzw. Bedingungen akzeptieren. Die Benutzung unseres Services ist kostenlos.</p>\
+<p>(2) Mit der Nutzung sind Sie mit den Nutzungsbedingungen unserer Webseite einverstanden. Durch Ihr Einverständnis garantieren Sie uns, dass Sie diesen Onlineservice für nichts verwenden, das gegen die Nutzungsbedingungen oder geltendes Recht verstößt.</p>\
+<p>(3) Durch das Benutzen von unserer Webseite kommt kein Vertrag zwischen den Nutzern/Nutzerinnen und uns zustande.</p>\
+<p>(4) Unter "erstellte Grafiken" verstehen wir sämtliche Grafiken, die nicht unter <tt>/includes</tt> zu finden sind. Denmnach sind "nicht erstellte Grafiken" sämtliche Grafiken, die unter <tt>/includes</tt> zu finden sind.</p>\
+<h2>§ 2 Haftungsbeschränkung</h2>\
+<p>(1) Es ist wird nicht für einen ständigen unterbrechungsfreien Abruf der Webseite garantiert. Einer Haftung diesbezüglich wird hiermit ausdrücklich widersprochen. Auch bei großer Sorgfalt können Ausfallzeiten leider nicht ausgeschlossen werden.</p>\
+<p>(2) Wir übernimmen keinerlei Gewähr für jegliche auf dieser Webseite veröffentliche Inhalte, insbesondere nicht für deren Richtigkeit, Vollständigkeit und Aktualität. Wir haften grundsätzlich nur im Falle einer vorsätzlichen oder grob fahrlässigen Pflichtverletzung.</p>\
+<h2>§ 3 Urheberrecht</h2>\
+<p>(1) Sämtliche von dieser Webseite erstellen Grafiken unterliegen - sofern nicht anders gekennzeichnet - dem Copyright unserer Seite. Jede Form von Wiedergabe und/oder Modifikation ist, sofern das Wasserzeichen in der rechten unteren Ecke nicht entfernt wird, erlaubt. Sollten Sie eine Entfernung des Wasserzeichens wünschen, kontaktieren Sie uns bitte. Alle nicht erstellten Grafiken unterliegen - sofern nicht anders gekennzeichnet - dem Copyright unserer Seite. Jede Form von Wiedergabe und/oder Modifikation ist ohne schriftliche Genehmigung verboten. Andersfalls behalten wir uns das Recht vor gerichtlich gegen diese Rechtsverletzung vorzugehen. Alle Kosten, die durch eine Rechtsverletzung seitens eines Benutzers verursacht werden, werden diesem in Rechnung gestellt.</p>\
+<p>(2) Wir besitzen keine Urheberrechte der für die Erstellung der erstellten Grafiken benötigten Grafiken. Jedoch besitzen wir für alle dafür benötigten Grafiken die Nutzungsrechte.</p>\
+<h2>§ 4 Änderungsvorbehalt</h2>\
+<p>Wir haben jederzeit das Recht die Nutzungsbedingungen zu ändern. Jegliche Änderungen in den Nutzungsbedingungen müssen nicht angekündigt werden.</p>\
+<h2>§ 5 Salvatorische Klausel</h2>\
+<p>Diese Nutzungsbedingung ist als Teil unserer Webseite zu betrachten, von dem aus auf diese Seite verwiesen wird. Sind einzelne Formulierungen dieser Forum-Nutzungsbedingung nicht mehr ganz oder nicht mehr vollständig konform mit der geltenden Rechtslage, so ist davon auszugehen, dass die übrigen Regelungen der Forum-Nutzungsbedingungen bestehen bleiben.</p>
