Removed some forum

--- a/libraries/translations/de.lang
+++ b/libraries/translations/de.lang
@@ -27,4 +27,4 @@ legal.tos=<h1>Nutzungsbedingungen für Icon-Craft.net</h1>\
 <h2>§ 4 Änderungsvorbehalt</h2>\
 <p>Wir haben jederzeit das Recht die Nutzungsbedingungen zu ändern. Jegliche Änderungen in den Nutzungsbedingungen müssen nicht angekündigt werden.</p>\
 <h2>§ 5 Salvatorische Klausel</h2>\
-<p>Diese Nutzungsbedingung ist als Teil unserer Webseite zu betrachten, von dem aus auf diese Seite verwiesen wird. Sind einzelne Formulierungen dieser Forum-Nutzungsbedingung nicht mehr ganz oder nicht mehr vollständig konform mit der geltenden Rechtslage, so ist davon auszugehen, dass die übrigen Regelungen der Forum-Nutzungsbedingungen bestehen bleiben.</p>
+<p>Diese Nutzungsbedingung ist als Teil unserer Webseite zu betrachten, von dem aus auf diese Seite verwiesen wird. Sind einzelne Formulierungen dieser Nutzungsbedingung nicht mehr ganz oder nicht mehr vollständig konform mit der geltenden Rechtslage, so ist davon auszugehen, dass die übrigen Regelungen der Nutzungsbedingungen bestehen bleiben.</p>
