--- a/libraries/translations/de.lang
+++ b/libraries/translations/de.lang
@@ -1,7 +1,7 @@
 header.slogan=Deine Blöcke, dein Style
 
 body.uptime.all_time=Uptime gesamt:
-body.uptime.last_month=Uptime letzter Monat:
+body.uptime.last_month=Uptime aktueller Monat:
 
 menu.home=Home
 menu.pages=Seiten
