--- a/libraries/translations/en.lang
+++ b/libraries/translations/en.lang
@@ -1,7 +1,7 @@
 header.slogan=Your Blocks, your Style
 
 body.uptime.all_time=Uptime total:
-body.uptime.last_month=Uptime last month:
+body.uptime.last_month=Uptime current month:
 
 menu.home=Home
 menu.pages=Pages
